--- a/public/index.html
+++ b/public/index.html
@@ -48,9 +48,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      color: #fff;
-      font-size: 1.5rem;
-      position: relative;
+      gap: 10px;
     }
 
     video {
@@ -58,9 +56,7 @@
       height: 100%;
       object-fit: cover;
       border-radius: 15px;
-      position: absolute;
-      top: 0;
-      left: 0;
+      flex: 1;
     }
 
     footer {
@@ -80,39 +76,96 @@
   </p>
 
   <div id="video-container">
-    Your camera feed will appear here.
+    <video id="localVideo" autoplay muted playsinline></video>
+    <video id="remoteVideo" autoplay playsinline></video>
   </div>
 
   <footer>
     © 2025 HartCast Media | Powered by Wondervale Signalworks
   </footer>
 
+  <script src="/socket.io/socket.io.js"></script>
   <script>
-    async function startCamera() {
-      const videoContainer = document.getElementById('video-container');
-      try {
-        const stream = await navigator.mediaDevices.getUserMedia({ video: true, audio: true });
-        const videoElem = document.createElement('video');
-        videoElem.autoplay = true;
-        videoElem.playsInline = true;
-        videoElem.muted = true; // mute to avoid echo
-        videoElem.srcObject = stream;
+    const localVideo = document.getElementById('localVideo');
+    const remoteVideo = document.getElementById('remoteVideo');
+    const socket = io();
+    let localStream;
+    let peerConnection;
 
-        // Clear placeholder text and add video
-        videoContainer.innerHTML = '';
-        videoContainer.appendChild(videoElem);
+    const config = {
+      iceServers: [{ urls: 'stun:stun.l.google.com:19302' }]
+    };
+
+    async function startCamera() {
+      try {
+        localStream = await navigator.mediaDevices.getUserMedia({ video: true, audio: true });
+        localVideo.srcObject = localStream;
+        socket.emit('join');
       } catch (err) {
-        videoContainer.textContent = 'Error accessing camera/mic: ' + err.message;
         console.error('Camera/mic error:', err);
       }
     }
 
-    // Start camera as soon as page loads
+    socket.on('joined', () => {
+      createPeerConnection();
+      localStream.getTracks().forEach(track => peerConnection.addTrack(track, localStream));
+    });
+
+    socket.on('offer', async (offer) => {
+      createPeerConnection();
+      await peerConnection.setRemoteDescription(new RTCSessionDescription(offer));
+      localStream.getTracks().forEach(track => peerConnection.addTrack(track, localStream));
+      const answer = await peerConnection.createAnswer();
+      await peerConnection.setLocalDescription(answer);
+      socket.emit('answer', answer);
+    });
+
+    socket.on('answer', async (answer) => {
+      await peerConnection.setRemoteDescription(new RTCSessionDescription(answer));
+    });
+
+    socket.on('ice-candidate', async (candidate) => {
+      try {
+        await peerConnection.addIceCandidate(candidate);
+      } catch (e) {
+        console.error('Error adding received ice candidate', e);
+      }
+    });
+
+    function createPeerConnection() {
+      if (peerConnection) return;
+
+      peerConnection = new RTCPeerConnection(config);
+
+      peerConnection.onicecandidate = ({ candidate }) => {
+        if (candidate) {
+          socket.emit('ice-candidate', candidate);
+        }
+      };
+
+      peerConnection.ontrack = ({ streams: [stream] }) => {
+        remoteVideo.srcObject = stream;
+      };
+
+      if (localStream) {
+        localStream.getTracks().forEach(track => peerConnection.addTrack(track, localStream));
+      }
+
+      socket.emit('ready');
+    }
+
+    socket.on('ready', async () => {
+      if (!peerConnection) createPeerConnection();
+      const offer = await peerConnection.createOffer();
+      await peerConnection.setLocalDescription(offer);
+      socket.emit('offer', offer);
+    });
+
     window.addEventListener('load', () => {
       startCamera();
-      console.log("HartCast loaded and camera started.");
     });
   </script>
 </body>
 </html>
+
 
